# stevedore

./: .gitignore  pyproject.toml
.github/workflows/: build-and-push.yaml
blocks/: __init__.py  minio.py
deployments/: local_download_worker.py  local_download_worker.yaml
docker/: docker-compose.yml
docker/audio-worker/: Dockerfile  entrypoint.sh  requirements.txt
docker/download-worker/: Dockerfile  entrypoint.sh  requirements.txt
docker/orchestration-worker/: Dockerfile  entrypoint.sh
docs/: add_task.md  howto_local_prefect.md  project_structure.md  quickstart.md
flows/: download_video_flow.py
profiles/: README.md  linux.env.example  local.env.example  local.toml
scripts/: apply_local_deployments.sh  create_work_pool.sh  register_local_blocks.py  register_local_blocks.sh  run_deployment_once.sh  start_audio_worker.sh  start_downloader_worker.sh  start_orchestration_worker.sh
stevedore/: __init__.py
stevedore/blocks/: cobalt.py  minio.py
stevedore/cli/: __init__.py  operations.py
stevedore/deployments/: local_audio_worker.py  local_audio_worker.yaml  local_download_worker.py  local_download_worker.yaml  local_pipeline.py  local_pipeline.yaml
stevedore/flows/: audio_extraction_flow.py  stevedore.py
stevedore/tasks/: __init__.py  audio.py  downloads.py
tasks/: __init__.py  downloads.py
tests/: test_tasks_downloads.py
